[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vclog"
version = "1.1.0"
authors = [
  { name="Vistor"},
]
description = "A minimal logger for a minimal experience"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/vistormu/vclog"
"Bug Tracker" = "https://github.com/vistormu/vclog/issues"
