[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vclog"
version = "1.1.1"
authors = [
  { name="Vistor"},
]
description = "Vistor's Console Logger (VCLog) offers a minimal and colorful console logging. Single-script. No dependencies."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/vistormu/vclog"
"Bug Tracker" = "https://github.com/vistormu/vclog/issues"
